# UBB-Y1-S2-OOP

./: .gitignore  README.md
Lab14/: Action.cpp  Action.h  AdoptedDogTableModel.cpp  AdoptedDogTableModel.h  CMakeLists.txt  ChartWidget.cpp  ChartWidget.h  DogTableModel.cpp  DogTableModel.h  DogValidator.cpp  DogValidator.h  MainWindow.cpp  Repository.cpp  Service.cpp  Service.h  SubjectRepo.cpp  SubjectRepo.h  Tests.cpp  UI.cpp  UI.h  adopteddogs.txt  config.yml  dogs.txt  index.html  main.cpp  mainWindow.ui  win_build.sh
Lab14/GUI/: ChartWidget.h  DisplayWidget.cpp  DisplayWidget.h  MainWindow.cpp  MainWindow.h  mainWindow.ui
Lab3/: CMakeLists.txt  main.c
Lab3-4/: .clang-format  CMakeLists.txt  DynamicArray.c  DynamicArray.h  OperationStack.c  OperationStack.h  UI.c  UI.h  controller.c  controller.h  domain.c  domain.h  main.c  repo.c  repo.h
Lab5/: .clang-format  CMakeLists.txt  Domain.h  DynamicVector.cpp  DynamicVector.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Tests.cpp  Tests.h  UI.cpp  UI.h  main.cpp
Lab6/: CMakeLists.txt  Domain.cpp  Domain.h  DynamicVector.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Tests.cpp  Tests.h  UI.cpp  UI.h  main.cpp
Lab8/: CMakeLists.txt  FileRepository.cpp  FileRepository.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Tests.cpp  UI.cpp  UI.h  main.cpp
Lab9/: CMakeLists.txt  ChartWidget.cpp  DisplayWidget.cpp  DisplayWidget.h  DogTableModel.cpp  Domain.cpp  Domain.h  FileDialogBox.cpp  FileDialogBox.h  FileRepository.cpp  FileRepository.h  HtmlRepository.cpp  HtmlRepository.h  MainWindow.cpp  MainWindow.h  Repository.h  Service.cpp  Service.h  Tests.cpp  Tests.h  UI.cpp  adopteddogs.txt  config.yml  dogs.txt  main.cpp
eeeeeewww/: stuff.h  stuff2.h
exam-guide-model/: .clang-format  AstronomerWindow.cpp  AstronomerWindow.h  AstronomerWindow.ui  CMakeLists.txt  Domain.cpp  Domain.h  Repository.h  StarTableModel.cpp  StarTableModel.h  astron.txt  main.cpp  stars.txt  test.txt  tests.cpp  tests.h
test/: CMakeLists.txt  Domain.cpp  Domain.h  Repository.cpp  Repository.h  UI.cpp  UI.h  main.cpp
test-model/: Aircraft.cpp  Aircraft.h  CMakeLists.txt  Repository.cpp  Repository.h  UI.cpp  UI.h  main.cpp
test_qt/: CMakeLists.txt  Domain.cpp  Domain.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Repository.cpp  Repository.h  Tests.cpp  Tests.h  main.cpp  tests.txt
